@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE map SYSTEM "http://mapeditor.org/dtd/1.0/map.dtd">
 <map version="1.0" orientation="orthogonal" width="32" height="32" tilewidth="32" tileheight="32">
- <tileset name="Desert" firstgid="1" tilewidth="32" tileheight="32" spacing="1">
+ <tileset name="Desert" firstgid="1" tilewidth="32" tileheight="32" spacing="1" margin="1">
   <image source="tmw_desert_spacing.png"/>
  </tileset>
  <!-- Layer data is compressed (GZip) binary data, encoded in Base64 -->
