@@ -110,6 +110,7 @@ dialog.newtileset.name.label=Tileset name:
 dialog.newtileset.tileheight.label=Tile height:
 dialog.newtileset.tilesetimgref.label=Reference tileset image
 dialog.newtileset.tilespacing.label=Tile spacing:
+dialog.newtileset.tilemargin.label=Margin:
 dialog.newtileset.tilewidth.label=Tile width:
 dialog.newtileset.title=New Tileset
 dialog.newtileset.usetransparentcolor.label=Use transparent color
